--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,8 +5,8 @@
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Albums
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">All Albums</a>
+            <div class="dropdown-menu border-0" aria-labelledby="albums-link">
+                <a href="{% url 'albums' %}" class="dropdown-item">All Albums</a>
                 <a href="" class="dropdown-item">By Price</a>
                 <a href="" class="dropdown-item">By Rating</a>
                 <a href="" class="dropdown-item">By Genre</a>
@@ -18,8 +18,8 @@
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Artists
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">All Artists</a>
+            <div class="dropdown-menu border-0" aria-labelledby="artists-link">
+                <a href="{% url 'artists' %}" class="dropdown-item">All Artists</a>
                 <a href="" class="dropdown-item">By Rating</a>
                 <a href="" class="dropdown-item">By Genre</a>
             </div>
