--- a/products/templates/products/album_detail.html
+++ b/products/templates/products/album_detail.html
@@ -49,6 +49,9 @@
                     {% endif %}
                 </div>
             </div>
+            <div class="col-12 col-md-6 col-lg-4 offset-md-3 offset-lg-4">
+                <iframe src="https://open.spotify.com/embed/album/{{ album.spotify_link }}" width="280" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>    
         </div>
     </div>
 {% endblock %}
