--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                     <h2 class="float-left text-black align-middle">Vinyl</h2>
                 </div>
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                    <form method="GET" action="">
+                    <form method="GET" action="{% url 'albums' %}">
                         <div class="input-group w-100">
                             <input class="form-control border border-black rounded-0" type="text" name="q"
                                 placeholder="Search our site">
