--- a/products/templates/products/artist_detail.html
+++ b/products/templates/products/artist_detail.html
@@ -63,7 +63,7 @@
                                 </div>
                             {% endif %}
                             <div class="card-body pb-0 pt-0">
-                                <p class="mb-0 mt-0">{{ album.genre }}</p>
+                                <i class="fa fa-tags" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ album.genre }}" class="mb-0 mt-0"> {{ album.genre }}</a>
                             </div>
                             <div class="card-footer bg-white pt-0 border-0 text-left">
                                 <div class="row">
