--- a/products/templates/products/album_detail.html
+++ b/products/templates/products/album_detail.html
@@ -51,7 +51,31 @@
             </div>
             <div class="col-12 col-md-6 col-lg-4 offset-md-3 offset-lg-4">
                 <iframe src="https://open.spotify.com/embed/album/{{ album.spotify_link }}" width="280" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            </div>    
+            </div>
+            <form class="form" action="{% url 'add_to_cart' album.id %}" method="POST">
+                {% csrf_token %}
+                <div class="form-row">
+                    <div class="col-12">
+                        <p class="mt-3"><strong>Quantity:</strong></p>
+                        <div class="form-group w-50">
+                            <div class="input-group">
+                                <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ album.id }}" id="id_qty_{{ album.id }}">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-12">
+                        <a href="{% url 'albums' %}" class="btn btn-outline-black rounded-0 mt-5">
+                            <span class="icon">
+                                <i class="fas fa-chevron-left"></i>
+                            </span>
+                            <span class="text-uppercase">Keep Shopping</span>
+                        </a>
+                        <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Cart">
+                    </div>
+                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                </div>
+            </form>    
         </div>
     </div>
 {% endblock %}
