--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,9 @@
                 crossorigin="anonymous" type="text/css">
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
                 integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Monoton&family=Righteous&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="{% static 'css/base.css' %}">
         {% endblock %}
 
@@ -47,20 +50,21 @@
 
     <body>
         <header class="container-fluid fixed-top">
-            <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
-                    <a href="{% url 'home' %}" class="nav-link main-logo-link float-left">
-                        <img src="{{ MEDIA_URL }}logo.png" alt="Vinyl Logo">
+            <div id="topnav" class="row pt-lg-2 d-none d-lg-flex">
+                <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 d-flex">
+                    <a href="{% url 'home' %}" class="nav-link main-logo-link">
+                        <img class="float-left" src="{{ MEDIA_URL }}logo.png" alt="Vinyl Logo">
+                        <p class=" text-black my-auto logo-text float-left">Vinyl</p>
                     </a>
-                    <h2 class="float-left text-black align-middle">Vinyl</h2>
+                    
                 </div>
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                     <form method="GET" action="{% url 'albums' %}">
-                        <div class="input-group w-100">
-                            <input class="form-control border border-black rounded-0" type="text" name="q"
+                        <div id="nav-search-bar" class="input-group w-100">
+                            <input class="form-control rounded-0" type="text" name="q"
                                 placeholder="Search our site">
                             <div class="input-group-append">
-                                <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                                <button class="form-control btn btn-black rounded-0" type="submit">
                                     <span class="icon">
                                         <i class="fas fa-search"></i>
                                     </span>
@@ -93,8 +97,8 @@
                             </div>
                         </li>
                         <li class="list-inline-item">
-                            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
-                                href="{% url 'view_cart' %}">
+                            <a class="{% if grand_total %}font-weight-bold{% else %}text-black{% endif %} nav-link"
+                                href="{% url 'view_cart' %}" id="shopping-cart-link">
                                 <div class="text-center">
                                     <div><i class="fas fa-shopping-bag fa-lg"></i></div>
                                     <p class="my-0">
