Added media query for small mobiles and modified HTML to conform to these changes.

--- a/products/templates/products/album_detail.html
+++ b/products/templates/products/album_detail.html
@@ -38,7 +38,7 @@
                             <p class="mb-0 mt-0">by Independent Artist</p>
                         </div>
                     {% endif %}
-                    <div class="card-body pb-0 pt-0">
+                    <div class="card-body p-0">
                         <i class="fa fa-tags" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ album.genre }}" class="mb-0 mt-0"> {{ album.genre }}</a>
                     </div>
                     <p class="lead mb-0 text-left font-weight-bold">${{ album.price }}</p>
