--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -1,4 +1,4 @@
-<ul class="d-lg-none mb-0">
+<ul id="mobile-navbar" class="d-lg-none mb-0">
     <li class="list-inline-item">
         <a class="nav-link d-block d-lg-none" href="#" id="mobile-search" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -29,7 +29,7 @@
             aria-haspopup="true" aria-expanded="false">
             <div class="text-center">
                 <div><i class="fas fa-user fa-lg"></i></div>
-                <p class="my-0">My Account</p>
+                <p class="my-0"><span>My Account</span></p>
             </div>
         </a>
         <div class="dropdown-menu border-0" aria-labelledby="user-options">
