--- a/products/templates/products/album_detail.html
+++ b/products/templates/products/album_detail.html
@@ -12,88 +12,96 @@
 {% block content %}
     <div class="overlay"></div>
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-6 d-flex justify-content-center">
                 <div class="image-container my-5">
                     {% if album.image %}
                         <a href="{{ album.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid" src="{{ album.image.url }}" alt="{{ album.name }}">
+                            <img class="album-detail-cover-mobile card-img-top img-fluid" src="{{ album.image.url }}" alt="{{ album.name }}">
                         </a>
                         {% else %}
                         <a href="{{ album.image.url }}" target="_blank">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ album.name }}">
+                            <img class="album-detail-cover-mobile card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ album.name }}">
                         </a>
                     {% endif %}
                 </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
+            <div class="col-12 col-md-6 d-flex justify-content-center">
                 <div class="album-details-container mb-5 mt-md-5">
-                    <p class="mb-0">{{ album.name }}</p>
+                    <div class="card-body p-0">
+                        <p class="mb-0 text-center text-md-left">{{ album.name }}</p>
+                    </div>
                     {% if album.artist %}
                         <div class="card-body p-0">
-                            <p class="mb-0 mt-0">by {{ album.artist }}</p>
+                            <p class="mb-0 mt-0 text-center text-md-left">by {{ album.artist }}</p>
                         </div>
                     {% else %}
                         <div class="card-body p-0">
-                            <p class="mb-0 mt-0">by Independent Artist</p>
+                            <p class="mb-0 mt-0 text-center text-md-left">by Independent Artist</p>
                         </div>
                     {% endif %}
-                    <div class="card-body p-0">
+                    <div class="card-body p-0 text-center text-md-left">
                         <i class="fa fa-tags" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ album.genre }}" class="mb-0 mt-0"> {{ album.genre }}</a>
                     </div>
-                    <p class="lead mb-0 text-left font-weight-bold">${{ album.price }}</p>
+                    <div class="card-body p-0">
+                        <p class="lead mb-0 text-left font-weight-bold text-center text-md-left">${{ album.price }}</p>
+                    </div>
                     {% if album.rating %}
-                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ album.rating }} / 5</small>
+                        <div class="card-body p-0 text-center text-md-left">
+                            <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ album.rating }} / 5</small>
+                        </div>    
                     {% else %}
-                        <small class="text-muted">No Rating</small>
+                        <div class="card-body p-0 text-center text-md-left">
+                            <small class="text-muted">No Rating</small>
+                        </div>
                     {% endif %}
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4 offset-md-3 offset-lg-4">
-                <iframe src="https://open.spotify.com/embed/album/{{ album.spotify_link }}" width="280" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            </div>
-            <form class="form" action="{% url 'add_to_cart' album.id %}" method="POST">
-                {% csrf_token %}
-                <div class="form-row">
-                    <div class="col-12">
-                        <p class="mt-3"><strong>Quantity:</strong></p>
-                        <div class="form-group w-50">
-                            <div class="input-group">
-                                <div class="input-group-prepend">
-                                    <button class="decrement-qty btn btn-black rounded-0" 
-                                        data-item_id="{{ album.id }}" id="decrement-qty_{{ album.id }}">
-                                        <span class="icon">
-                                            <i class="fas fa-minus"></i>
-                                        </span>
-                                    </button>
-                                </div>
-                                <input class="form-control qty_input" type="number"
-                                    name="quantity" value="1" min="1" max="99"
-                                    data-item_id="{{ album.id }}"
-                                    id="id_qty_{{ album.id }}">
-                                <div class="input-group-append">
-                                    <button class="increment-qty btn btn-black rounded-0"
-                                        data-item_id="{{ album.id }}" id="increment-qty_{{ album.id }}">
-                                        <span class="icon">
-                                            <i class="fas fa-plus"></i>
-                                        </span>
-                                    </button>
+                    <form class="form" action="{% url 'add_to_cart' album.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-12 text-center text-md-left">
+                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <div class="form-group w-50 mx-auto mx-md-0">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn btn-black rounded-0" 
+                                                data-item_id="{{ album.id }}" id="decrement-qty_{{ album.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input class="form-control qty_input" type="number"
+                                            name="quantity" value="1" min="1" max="99"
+                                            data-item_id="{{ album.id }}"
+                                            id="id_qty_{{ album.id }}">
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn btn-black rounded-0"
+                                                data-item_id="{{ album.id }}" id="increment-qty_{{ album.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-plus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
+                            <div class="col-12 mt-2 mb-5 text-center text-md-left">
+                                <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-1 mt-sm-0" value="Add to Cart">
+                                <a href="{% url 'albums' %}" class="btn btn-outline-black rounded-0 mt-1 mt-sm-0">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="text-uppercase">Keep Shopping</span>
+                                </a>
+                            </div>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
-                    </div>
-                    <div class="col-12">
-                        <a href="{% url 'albums' %}" class="btn btn-outline-black rounded-0 mt-5">
-                            <span class="icon">
-                                <i class="fas fa-chevron-left"></i>
-                            </span>
-                            <span class="text-uppercase">Keep Shopping</span>
-                        </a>
-                        <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Cart">
-                    </div>
-                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                </div>
-            </form>    
+                    </form>
+                </div> 
+            </div>
+            <div class="col-12 col-md-6 d-flex justify-content-center mb-3">
+                <iframe src="https://open.spotify.com/embed/album/{{ album.spotify_link }}" width="280" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            </div>                
         </div>
     </div>
 {% endblock %}            
