--- a/products/templates/products/artists.html
+++ b/products/templates/products/artists.html
@@ -26,17 +26,23 @@
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
                                 {% if artist.image %}
-                                <a href="{% url 'artist_detail' artist.id %}">
+                                    <a href="{% url 'artist_detail' artist.id %}">
                                         <img class="card-img-top img-fluid" src="{{ artist.image.url }}" alt="{{ artist.name }}">
                                     </a>
                                 {% else %}
-                                    <a href="">
+                                    <a href="{% url 'artist_detail' artist.id %}">
                                         <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ artist.name }}">
                                     </a>
                                 {% endif %}
                                 <div class="card-body pb-0">
                                     <p class="mb-0">{{ artist.name }}</p>
                                 </div>
+                                {% if request.user.is_superuser %}
+                                    <small>
+                                        <a href="{% url 'edit_artist' artist.id %}">Edit</a> | 
+                                        <a class="text-danger" href="{% url 'delete_artist' artist.id %}">Delete</a>
+                                    </small>
+                                {% endif %}
                             </div>
                         </div>
                         {% if forloop.counter|divisibleby:1 %}
