--- a/products/templates/products/albums.html
+++ b/products/templates/products/albums.html
@@ -82,6 +82,12 @@
                                             {% else %}
                                                 <small class="text-muted">No Rating</small>
                                             {% endif %}
+                                            {% if request.user.is_superuser %}
+                                                <small>
+                                                    <a href="{% url 'edit_album' album.id %}">Edit</a> | 
+                                                    <a class="text-danger" href="{% url 'delete_album' album.id %}">Delete</a>
+                                                </small>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
